--- a/css/main.css
+++ b/css/main.css
@@ -243,3 +243,28 @@ justify-content: center;
     padding-top: 0px;
     padding-bottom: 20px;
 }
+
+ul{
+    display: none;
+  }
+  
+  input:checked  ~ ul{
+    display:block;
+  }
+  input {
+    display: none;
+  
+  }
+  
+  label {
+    box-sizing: border-box;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    user-select: none;
+  }
