--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
     height: 80px;
     width: 100%; /* hacemos que la cabecera ocupe el ancho completo de la página */
     left: 0; /* Posicionamos la cabecera al lado izquierdo */
-    top: 120px; /* Posicionamos la cabecera pegada arriba */
+    top: 75px; /* Posicionamos la cabecera pegada arriba */
     position: fixed; 
 }
 
@@ -42,6 +42,24 @@ header ul {
     height: 1.5em;
 }   
 
+b {
+    animation-duration: 4s;
+    animation-name: slidein;
+    animation-iteration-count: 2, 1;
+    animation-direction: alternate;
+
+}
+    
+@keyframes slidein {
+   from {
+    margin-left: 100%;
+    width: 300%
+   }
+   to {
+    margin-left: 0%;
+    width: 100%;
+   }
+}
 .link {
     font-family:inherit ;
     font-size:  1em; 
@@ -55,7 +73,8 @@ nav ul {
     font-weight: bolder;
     text-align: center;
     background-color: #aa6fe6;
-    padding: 20px;
+    width: 100%;
+    padding: 10px;
     background-position: 1px;
 }
 .nav-menu-color-primary{
@@ -246,25 +265,103 @@ justify-content: center;
 
 ul{
     display: none;
-  }
-  
-  input:checked  ~ ul{
+}
+
+input:checked  ~ ul{
     display:block;
-  }
-  input {
+}
+input {
     display: none;
+} 
   
-  }
-  
-  label {
-    box-sizing: border-box;
-    display: inline-block;
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
+label {
+   /*  display: inline-block;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
     font-weight: bold;
     text-align: center;
-    user-select: none;
+    user-select: none; */
+    margin-left: 1em;
   }
+
+
+/* menu burger */
+  input#abrir-cerrar { 
+    visibility:hidden;
+    position: absolute;
+    top: -9999px;
+}
+
+.toggle-button {
+    display:block;
+    width:50px;
+    height:50px;
+    position:relative;
+    cursor: pointer;
+    box-sizing: border-box;
+
+}
+.toggle-button:before, .toggle-button:after {
+    position:absolute;
+    display:block;
+    content:" ";
+    width: calc(100% / 2);               
+    box-sizing: border-box;
+    left: calc(100% / 4);
+    transition: all 0.2s ease-out;
+}
+
+.toggle-button:before {
+    top: calc(100% / 4);
+    height:calc(100% / 4);
+    border-top:2px solid black;
+    border-bottom:2px solid black;
+    background-color: transparent;
+}
+
+.toggle-button:after {
+    height:1px;
+    bottom:calc(100% / 4);
+    border-top:2px solid black;
+    background-color: transparent;
+}  
+ 
+input#abrir-cerrar:checked + .toggle-button:before, input#abrir-cerrar:checked + .toggle-button:after {
+    top:calc(100% / 2);
+    height:1px;
+    border-bottom:0;
+    
+}
+
+input#abrir-cerrar:checked + .toggle-button:before {
+    transform: rotate(45deg); 
+}
+
+input#abrir-cerrar:checked + .toggle-button:after {
+    transform: rotate(-45deg);
+}
+.abrir, .cerrar { 
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    text-indent: -9999px;
+}
+
+.abrir {
+    display:block;
+}
+
+.cerrar {
+    display:none;
+}
+
+input#abrir-cerrar:checked + .toggle-button .abrir {
+    display:none;
+}
+
+input#abrir-cerrar:checked + .toggle-button .cerrar {
+    display:block;
+}
