--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@
     padding-right: 0px;
     padding-bottom: 0px;
     height: 100px;
+    filter: brightness(1.1);
+    mix-blend-mode: multiply;
 
     display: flex;
     justify-content: center;
@@ -35,13 +37,13 @@ header ul {
 
 .header-banner{
     background: rgb(10,6,14);
-    background: radial-gradient(circle, rgba(10,6,14,1) 46%, rgba(156,72,202,1) 91%, rgba(173,164,177,1) 100%);
+    background: radial-gradient(circle, #0b0710 46%, #9c48ca 91%, #ada4b1 100%);
     padding: 1px; 
     text-align: center;
     color: azure;
     height: 1.5em;
-}   
-
+    box-shadow:  0px 10px 10px -6px #62526c;
+}
 b {
     animation-duration: 4s;
     animation-name: slidein;
@@ -76,6 +78,8 @@ nav ul {
     width: 100%;
     padding: 10px;
     background-position: 1px;
+    box-shadow:  0px 10px 10px -6px #3a1848;
+
 }
 .nav-menu-color-primary{
     padding-bottom: 20px;
@@ -191,20 +195,28 @@ table {
 
 th {
     border: black 1px solid;
-  
-    padding-top: 0px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    margin-left: 50px;
+    padding-top: 1em;
+    padding-right: 2em;
+    padding-bottom: 1em;
+    padding-left: 2em;
  }
  
 td{  
     border: black 1px solid;
+    padding-top: 1em;
+    padding-right: 2em;
+    padding-bottom: 1em;
+    padding-left: 2em;
  }
- .tablapromo{
+.tablapromo{
     display: flex;
     justify-content: center;
+    padding-bottom: 5em;
 }
+.new-in{
+   transition: all;
+}
+
 footer {
     text-align: center;
 }
@@ -364,4 +376,8 @@ input#abrir-cerrar:checked + .toggle-button .abrir {
 
 input#abrir-cerrar:checked + .toggle-button .cerrar {
     display:block;
+}
+
+.pagina-principal {
+    width: 100%;
 }
