--- a/css/main.css
+++ b/css/main.css
@@ -82,12 +82,20 @@ nav ul {
 
 }
 .nav-menu-color-primary{
-    padding-bottom: 20px;
-    height: 80px;
-    width: 50%; 
-    right: 20px;
+    box-sizing: border-box;  
+    height: 40px;
+    width: 350px; 
+    right: 2em;
     top: 50px;
     position: fixed;
+    background-color: transparent;
+    text-align: end;
+    font-family: Verdana,  Tahoma, sans-serif;       
+}
+
+.fondo{
+    color: #aa6fe6;
+
 }
 
 ul li a {
@@ -214,7 +222,9 @@ td{
     padding-bottom: 5em;
 }
 .new-in{
-   transition: all;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-size: 3em;
 }
 
 footer {
@@ -299,7 +309,7 @@ label {
 
 
 /* menu burger */
-  input#abrir-cerrar { 
+input#abrir-cerrar { 
     visibility:hidden;
     position: absolute;
     top: -9999px;
@@ -381,3 +391,4 @@ input#abrir-cerrar:checked + .toggle-button .cerrar {
 .pagina-principal {
     width: 100%;
 }
+
