--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,15 @@
     width: 100%; 
     left: 0; 
     top: 0; 
+    margin: 20px 0;
     position: fixed; 
 }
-
+.main{
+    width: 70%;
+    padding: 20px;
+    float: left;
+    box-sizing: border-box;
+}
 #nav {
     height: 80px;
     width: 100%; 
@@ -405,6 +411,12 @@ td{
 
 footer {
     text-align: center;
+    float: left;
+    margin-top: 20px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 20px;
+
 }
 
 .socialmedia{
@@ -553,7 +565,29 @@ input#abrir-cerrar:checked + .toggle-button .cerrar {
 .pagina-principal {
     width: 100%;
 }
-@media screen {
-    
+
+.contenedor {
+   max-width: 100px; 
+    margin: 0 auto;
+    overflow: hidden;
 }
- 
+@media screen and (max-width: 800px) {
+  
+}  
+   
+@media (min-width: 576px) {   body {
+    background-color: #f9f8fa;
+}}
+
+@media (min-width: 768px) {  body {
+    background-color: white;
+}
+
+@media (min-width: 992px) {  body {
+    background-color: white; }
+
+@media (min-width: 1200px) {  body {
+    background-color: white; }
+
+@media (min-width: 1400px) { body {
+    background-color: white;}
